--- a/Base/templates/base.html
+++ b/Base/templates/base.html
@@ -1,43 +1,49 @@
+<!DOCTYPE HTML>
 {% load static temptag_nav %}
+{%checkProfile request%}
 
-<html>
+<html class="entire">
     <head>
         <meta charset="utf-8">
         <title>Andrei Pak's Portfolio</title>
         <link href="{% static 'base.css' %}" rel="stylesheet" type="text/css">
     </head>
     
-    <body>        
+    <body>
         <div class="sidenav">
-            
+            <img src="/static/r2d2silhouette.png" height="190px">
             {%if user.is_authenticated%}
-                <p>Hello, {{user.username}}.</p>
-                <a href="">Approve a Friend</a>
-                <a href="">Add a Friend</a>
+                <p class="greet">Hello, {{user.username}}.</p>
+                <a href="{%url 'profile:friend-request-list'%}">Friend Requests</a>
+                <a href="{%url 'profile:friend-request'%}">Add a Friend</a>
                 <a href="{%url 'logout'%}?next=/">Log Out</a>
             {%else%}
                 <p>Not Logged In.</p>
-                <a href="{%url 'login'%}?next=/">Log In</a>
+                <a href="{%url 'login'%}">Log In</a>
             {%endif%}
             
 		    <a href="{% url 'index' %}" id="{% curPathID request '/' %}">Index</a>
 		    <a href="{% url 'other' %}" id="{% curPathID request '/other' %}">Other</a>
-		    <a href="{% url 'quizzer:main' %}" id="{% curPathID request '/quizzer/' %}">Quizer</a>
-		    <a 
-		        href="{% url 'quizzer:quiz-form' %}" 
-		        id="{% curPathID request '/quizer/create_quiz/' %}"
-		        class="quizInner"
-	        >Create Quiz</a>
-	        <a 
+		    <a href="{% url 'quizzer:main' %}" id="{% curPathID request '/quizzer/' %}">Quizer</a>		    
+            <a 
                 href="{% url 'quizzer:quiz-list' %}" 
                 id="{% curPathID request '/quizzer/list_quizzes/' %}"
                 class="quizInner"
             >List Quizzes</a>
+                
+            <a 
+		        href="{% url 'quizzer:quiz-form' %}" 
+		        id="{% curPathID request '/quizer/create_quiz/' %}"
+		        class="quizInner"
+	        >Create Quiz</a>
         </div>
-        
+        <h1 class="title">{{ title }}</h1>
         <div class="main">
-            <h1>{{ title }}</h1>
-              
+
+            {%if msg%}
+                {{msg}}
+            {%endif%} 
+            <!--quizProgressValidation request-->
             {% block content %}
             {% endblock %}
         </div>
