--- a/Profile/templates/Profile/friendrequest_list.html
+++ b/Profile/templates/Profile/friendrequest_list.html
@@ -1,20 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {%if msg%}
-        {{msg}}
-     {%endif%}
 
     <h1>All Friend Requests</h1>
     <ul>
         <form action="{%url 'profile:friend-request-list' %}" method="post" novalidate>
             <table>
                 {{ form.as_table }}
-                <tr>
-	                <td>&nbsp;</td>
-	                <td><input type="submit" name="approve" value="Aprrove"></td>
-	                <td><input type="submit" name="decline" value="Decline"></td>
-	            </tr>       
+                {%if form.hasRequests%}
+                    <tr>
+    	                <td>&nbsp;</td>
+    	                <td><input type="submit" name="approve" value="Aprrove"></td>
+    	                <td><input type="submit" name="decline" value="Decline"></td>
+    	            </tr>
+    	        {%endif%}  
             </table>         
             {% csrf_token %}
         </form>
