--- a/Profile/templates/Profile/profile_detail.html
+++ b/Profile/templates/Profile/profile_detail.html
@@ -2,14 +2,16 @@
 
 {%block title%}Profile{% endblock title%}
 {% block content %}
-    {%if msg%}
-        {{msg}}
-    {%endif%}
     
     <h1>Profile: </h1> {{profile.user}}
     
     <h2>Friends:</h2>
     {% for friend in friends %}
         <li> {{ friend.username }}</li>
+    {% endfor %}
+    
+    <h2>Quizzes:</h2>
+    {% for quiz in quizzes %}
+        <li> {{ quiz.name }}</li>
     {% endfor %}
 {% endblock %}
