--- a/Quizzer/templates/Quizzer/quiz_detail.html
+++ b/Quizzer/templates/Quizzer/quiz_detail.html
@@ -9,19 +9,18 @@
         <li> {{ QA.id }}</li>
     {% endfor %}
     </ul>
-    {%if quiz.owner == user or quiz.modifiedBy == 'a'%}
-    <form action="" method="post" novalidate>
-        <table>
-            {{ form.as_table }}
-            <tr>
-                <td>&nbsp;</td>
-                <td><input type="submit" value="Submit"></td>
-            </tr>       
-        </table>
-        {% csrf_token %}
-    </form>
-    {%endif%}
-
-        
+    <a href="{%url 'quizzer:quiz' type='seq' id=quiz.id%}">Start Quiz</a>
+    {%if form%}
+	    <form action="" method="post" novalidate>
+	        <table>
+	            {{ form.as_table }}
+	            <tr>
+	                <td>&nbsp;</td>
+	                <td><input type="submit" value="Submit"></td>
+	            </tr>       
+	        </table>
+	        {% csrf_token %}
+	    </form>
+	{%endif%}      
 
 {% endblock %}
