Local: Fixid Background sizing issue

--- a/static/base.css
+++ b/static/base.css
@@ -1,8 +1,21 @@
 .entire {
+    /* Set rules to fill background */
+    min-height: 100%;
+    min-width: 1024px;
+
+    /* Set up proportionate scaling */
+    width: 100%;
+    height: auto;
+
+    /* Set up positioning */
+    position: fixed;
+    top: 0;
+    left: 0;
 
     background-image: url("/static/hex.jpg");
     background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
+
 }
 
 /* The sidebar menu */
