--- a/Base/templates/projects.html
+++ b/Base/templates/projects.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<center xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<center>
     <img src="/static/django.png" height="100px" style="padding: 50px;"></br>
     <h3>Portfolio Built With Django</h3>
 </center>
