--- a/static/base.css
+++ b/static/base.css
@@ -2,6 +2,7 @@
     background-image: url("/static/hex.jpg");
     background-attachment: fixed;
     background-size: cover;
+    overflow: scroll;
 
 }
 
@@ -55,9 +56,9 @@
 
 /* Style page content */
 .main {
-  margin-left: 160px; /* Same as the width of the sidebar */
-  padding: 60px 10px;
-  width: 80%;
+    margin-left: 160px; /* Same as the width of the sidebar */
+    padding: 60px 10px;
+    width: 80%;
 }
 
 .centered {
