--- a/Base/templates/about.html
+++ b/Base/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<div class="centered">
     <p>
         Hi, I'm Andrei Pak. </br>
         An Entry Level Software Developer. </br>
@@ -29,4 +29,23 @@
         rather then illusions of a magician.
     </p>
 
+    <h3>Work With Me!</h3>
+    <p>
+        My skills and specialties include writing software & applications through the use of:
+    </p>
+    <ul style="column-count:2;">
+        <li>Python</li>
+        <li>Java</li>
+        <li>C</li>
+        <li>C++</li>
+        <li>C#</li>
+        <li>Visual Basic</li>
+        <li>Javascript</li>
+        <li>Django</li>
+        <li>JQuery</li>
+        <li>SQL</li>
+        <li>PHP</li>
+        <li>HTML</li>
+    </ul>
+</div>
 {% endblock %}
