--- a/Base/templates/base.html
+++ b/Base/templates/base.html
@@ -12,6 +12,10 @@
     <body>
         <div class="sidenav">
             <img src="/static/r2d2silhouette.png" height="190px">
+		    <a href="{% url 'index' %}" id="{% curPathID request '/' %}">Home</a>
+		    <a href="{% url 'about' %}" id="{% curPathID request '/about' %}">About Me</a>
+            <a href="{% url 'projects' %}" id="{% curPathID request '/projects' %}">My Projects</a>
+
             {%if user.is_authenticated%}
                 <p class="greet">Hello, {{user.username}}.</p>
                 <a href="{%url 'profile:friend-request-list'%}">Friend Requests</a>
@@ -21,11 +25,7 @@
                 <p>Not Logged In.</p>
                 <a href="{%url 'login'%}">Log In</a>
             {%endif%}
-            
-		    <a href="{% url 'index' %}" id="{% curPathID request '/' %}">Index</a>
-		    <a href="{% url 'about' %}" id="{% curPathID request '/about' %}">About Me</a>
-            <a href="{% url 'projects' %}" id="{% curPathID request '/projects' %}">My Projects</a>
-		    <a href="{% url 'quizzer:main' %}" id="{% curPathID request '/quizzer/' %}">Quizer</a>		    
+            <a href="{% url 'quizzer:main' %}" id="{% curPathID request '/quizzer/' %}">Quizer</a>
             <a 
                 href="{% url 'quizzer:quiz-list' %}" 
                 id="{% curPathID request '/quizzer/list_quizzes/' %}"
