--- a/Base/templates/index.html
+++ b/Base/templates/index.html
@@ -1,6 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-Index Page
-
+<center>
+    <img src="/static/r2d2_head.png" height="200px"></br>
+</center>
+<div class="index">
+    <h1><b><i>I am the droid you are looking for ...</i></b></h1>
+    <h3><b><i>
+        Hi there, I am a software developer. </br>
+        I can build solutions, solve your problems, and refine intuitive approaches.
+    </i></b></h3>
+</div>
 {% endblock %}
