--- a/static/base.css
+++ b/static/base.css
@@ -63,9 +63,18 @@
 
 .centered {
     display: block;
-    margin-left: 200px;
-    margin-right: 200px;
-    width: 50%;
+    margin-left: 100px;
+    margin-right: 100px;
+    width: 70%;
+}
+
+.index {
+    display: block;
+    margin-left: 100px;
+    margin-right: 100px;
+    position: absolute;
+    top: 300px;
+    width: 70%;
 }
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
