--- a/Quizzer/templates/Quizzer/quiz_detail.html
+++ b/Quizzer/templates/Quizzer/quiz_detail.html
@@ -1,31 +1,54 @@
 {% extends "base.html" %}
 
 {% block content %}
-		<h1>Quiz: {{ quiz.name }}</h1>
-		<h1>Owner: {{quiz.owner }}</h1>
-		<ul>
-		{% for QA in page_obj %}
-			<li> {{ QA.question }}</li>
-		{% endfor %}
-		</ul>
-		<a href="{%url 'quizzer:quiz' type='seq' id=quiz.id%}">
-			Start Sequenced Quiz
+	<h1>Quiz: {{ quiz.name }}</h1>
+	<h1>Owner: {{quiz.owner }}</h1>
+	<ul>
+	{% for QA in page_obj %}
+		<li> {{ QA.question }}</li>
+	{% endfor %}
+	</ul>
+	<a href="{%url 'quizzer:quiz' type='seq' id=quiz.id%}">
+		Start Sequenced Quiz
+	</a></br>
+	<a href="{%url 'quizzer:quiz' type='rng' id=quiz.id%}">
+		Start Random Sequenced Quiz
+	</a></br>
+	{% if quiz.quizttl_set %}
+		<a href="{%url 'quizzer:quiz' type='pri' id=quiz.id%}">
+			Start Weighted Sequenced Quiz
 		</a></br>
-		<a href="{%url 'quizzer:quiz' type='rng' id=quiz.id%}">
-			Start Random Sequenced Quiz
+		<a href="{%url 'quizzer:quiz' type='prirng' id=quiz.id%}">
+			Start Weighted Random Sequenced Quiz
 		</a></br>
+	{% endif %}
 
-		<h3>Add a Question to this Quiz</h3>
-		{%if form%}
-			<form action="" method="post" novalidate>
-				<table>
-					{{ form.as_table }}
-					<tr>
-						<td>&nbsp;</td>
-						<td><input type="submit" value="Submit"></td>
-					</tr>
-				</table>
-				{% csrf_token %}
-			</form>
-		{%endif%}
+	<h3>Add a Question to this Quiz</h3>
+	{%if form%}
+		<form action="" method="post" novalidate>
+			<table>
+				{{ form.as_table }}
+				<tr>
+					<td>&nbsp;</td>
+					<td><input type="submit" value="Submit"></td>
+				</tr>
+			</table>
+			{% csrf_token %}
+		</form>
+	{%endif%}
+	{%if user.is_authenticated%}
+		<a href="{%url 'quizzer:quiz-total' id=quiz.id%}">
+			<h3>Total Result</h3>
+		</a>
+		<h3>Quiz Results</h3>
+		<ul>
+			{% for quizResult in quiz.quizresult_set.all %}
+			<li>
+				<a href="{%url 'quizzer:quiz-result' id=quizResult.id%}">
+					{{ quizResult.id }}
+				</a>
+			</li>
+			{% endfor %}
+		</ul>
+	{%endif%}
 {% endblock %}
