local1 connected resume

--- a/Base/templates/base.html
+++ b/Base/templates/base.html
@@ -15,6 +15,7 @@
 		    <a href="{% url 'index' %}" id="{% curPathID request '/' %}">Home</a>
 		    <a href="{% url 'about' %}" id="{% curPathID request '/about' %}">About Me</a>
             <a href="{% url 'projects' %}" id="{% curPathID request '/projects' %}">My Projects</a>
+            <a href="{% url 'resume' %}" id="{% curPathID request '/resume' %}">My Resume</a>
             <a href="{% url 'quizzer:main' %}" id="{% curPathID request '/quizzer/' %}">Quizer</a>
             <a 
                 href="{% url 'quizzer:quiz-list' %}" 
